--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@angular/forms": "~9.1.12",
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~9.1.12",
+    "@angular/service-worker": "~9.1.12",
     "@zxing/ngx-scanner": "^2.0.0",
     "bootstrap": "^4.6",
     "core-js": "2",
