--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,24 +1,51 @@
 {
+  "name": "LeaveHomeSafe",
+  "short_name": "LeaveHomeSafe",
+  "theme_color": "#12b188",
   "background_color": "#12b188",
-  "description": "App description",
   "display": "standalone",
-  "gcm_sender_id": "49625052041",
-  "gcm_user_visible_only": true,
+  "scope": "/",
+  "start_url": "/",
   "icons": [
     {
-      "src": "https://abs.twimg.com/responsive-web/web/ltr/icon-default.604e2486a34a2f6e.png",
+      "src": "assets/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://abs.twimg.com/responsive-web/web/ltr/icon-default.604e2486a34a2f6e.png",
+      "src": "assets/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "name": "LeaveHomeSafe",
-  "short_name": "LeaveHomeSafe",
-  "start_url": "/",
-  "theme_color": "#12b188",
-  "scope": "/"
+  ]
 }
