--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "9.1.13",
-    "@angular/common": "~9.1.12",
-    "@angular/compiler": "~9.1.12",
-    "@angular/core": "~9.1.12",
-    "@angular/forms": "~9.1.12",
-    "@angular/platform-browser": "~9.1.12",
-    "@angular/platform-browser-dynamic": "~9.1.12",
-    "@angular/pwa": "^0.12.4",
-    "@angular/router": "~9.1.12",
-    "@angular/service-worker": "~9.1.12",
-    "@zxing/ngx-scanner": "^2.0.0",
-    "bootstrap": "^4.6",
-    "core-js": "2",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.16.1",
-    "rxjs": "^6.5.2",
-    "tslib": "^1.10.0",
-    "zone.js": "^0.9.1"
+    "@angular/common": "9.1.13",
+    "@angular/compiler": "9.1.13",
+    "@angular/core": "9.1.13",
+    "@angular/forms": "9.1.13",
+    "@angular/platform-browser": "9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/router": "9.1.13",
+    "@angular/service-worker": "^11.1.1",
+    "@zxing/ngx-scanner": "2.0.1",
+    "bootstrap": "4.6.0",
+    "core-js": "2.6.12",
+    "jquery": "3.5.1",
+    "popper.js": "1.16.1",
+    "rxjs": "6.6.3",
+    "tslib": "1.14.1",
+    "zone.js": "0.9.1"
   },
   "scripts": {
     "ng": "ng",
